--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
       displayName: Compile Sass assets
     - task: gulp@1
       displayName: Run gulp tasks
-    - task: azWebAppSettings@1
+    - task: DotNetCoreCLI@1
       displayName: Run az webapp config appsettings set --resource-group <resource-group-name> --name <app-name> --settings WEBSITES_PORT=8000
     - script: echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
       displayName: Write build info
